[gd_scene load_steps=7 format=2]

[ext_resource path="res://Enemy/Enemy.gd" type="Script" id=1]
[ext_resource path="res://Stats.tscn" type="PackedScene" id=2]
[ext_resource path="res://Enemy/EnemyRestingMaterial.tres" type="Material" id=3]

[sub_resource type="CapsuleMesh" id=1]

[sub_resource type="CapsuleShape" id=2]
radius = 0.8

[sub_resource type="CylinderShape" id=3]
radius = 2.5

[node name="Enemy" type="KinematicBody"]
transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 1.5, 0 )
collision_layer = 4
collision_mask = 5
script = ExtResource( 1 )

[node name="MeshInstance" type="MeshInstance" parent="."]
transform = Transform( 1, 0, 0, 0, -1.62921e-07, -1, 0, 1, -1.62921e-07, 0, 0, 0 )
mesh = SubResource( 1 )
material/0 = ExtResource( 3 )

[node name="CollisionShape" type="CollisionShape" parent="."]
transform = Transform( 1, 0, 0, 0, -1.62921e-07, -1, 0, 1, -1.62921e-07, 0, 0, 0 )
shape = SubResource( 2 )

[node name="PathUpdateTimer" type="Timer" parent="."]
wait_time = 0.25
autostart = true

[node name="Stats" parent="." instance=ExtResource( 2 )]

[node name="AttackRadius" type="Area" parent="."]

[node name="CollisionShape" type="CollisionShape" parent="AttackRadius"]
shape = SubResource( 3 )

[node name="AttackTimer" type="Timer" parent="."]
wait_time = 2.0
one_shot = true

[connection signal="timeout" from="PathUpdateTimer" to="." method="_on_PathUpdateTimer_timeout"]
[connection signal="you_died_signal" from="Stats" to="." method="_on_Stats_you_died_signal"]
[connection signal="timeout" from="AttackTimer" to="." method="_on_AttackTimer_timeout"]
